--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "morgan": "~1.9.1",
     "mysql2": "^3.6.5",
     "sequelize": "^6.35.2"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.6.2"
   }
 }
