--- a/package.json
+++ b/package.json
@@ -13,19 +13,25 @@
     "ejs": "^3.1.9",
     "express": "~4.16.1",
     "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.18.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "mysql2": "^3.9.1",
+    "passport": "^0.7.0",
+    "passport-oauth2": "^1.8.0",
     "pug": "^3.0.2",
     "sequelize": "^6.36.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.6",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
     "@types/jest": "^29.5.12",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.16",
+    "@types/passport": "^1.0.16",
+    "@types/passport-oauth2": "^1.4.15",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.56.0",
