--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "passport": "^0.7.0",
     "passport-oauth2": "^1.8.0",
     "pug": "^3.0.2",
-    "sequelize": "^6.36.0"
+    "reflect-metadata": "^0.2.2",
+    "sequelize": "^6.37.3",
+    "sequelize-typescript": "^2.1.6"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.6",
@@ -29,9 +31,10 @@
     "@types/express-session": "^1.18.0",
     "@types/jest": "^29.5.12",
     "@types/morgan": "^1.9.9",
-    "@types/node": "^20.11.16",
+    "@types/node": "^20.14.11",
     "@types/passport": "^1.0.16",
     "@types/passport-oauth2": "^1.4.15",
+    "@types/validator": "^13.12.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.56.0",
